# Hackathon_2

PHASE_1/: GEMINI.md  constitution.md  pyproject.toml  readme.md
PHASE_1/specs/: 000-initial-spec.md  001-refined-cli-spec.md  002-task-model-spec.md  003-final-implementation-spec.md  004-cli-commands-spec.md  005-implementation-plan.md  006-task-breakdown.md
PHASE_1/src/todo_cli/: cli.py  main.py  models.py  service.py
PHASE_1/src/todo_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
